--- a/linear_regression_theory.ipynb
+++ b/linear_regression_theory.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "linear_regression_theory.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM+zu9iQSduqdSBhDmLIhwj",
+      "authorship_tag": "ABX9TyNOnYQOacSnxZCa5aVsWA9Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -73,7 +73,29 @@
         "id": "CyTyt8Uh9Cce"
       },
       "source": [
+        "#### **Gradient Descent**\n",
+        "Gradient Descent is an algorithm to find the local minimum of a multivariable graph. It is defined as,\n",
         "\n",
+        "Repeat until convergence {\n",
+        "$$\\theta_j := \\theta_j - \\alpha \\frac{\\partial}{\\partial\\theta_j}J(\\theta_0,\\theta_1) $$\n",
+        "} <br>\n",
+        "Here $\\alpha$ is the learning rate. In psuedocode the algorithm looks like this,\n",
+        "\n",
+        "```python\n",
+        "def voodoomath(theta1, theta2):\n",
+        "  #(theta_j - alpha*(partial derivative of cost function))\n",
+        "  pass\n",
+        "\n",
+        "def grad_des(theta0, theta1):\n",
+        "  temp0 = voodoomath(theta0)\n",
+        "  temp1 = voodoomath(theta1)\n",
+        "  theta0 = temp0\n",
+        "  theta1 = temp1\n",
+        "  if converge:\n",
+        "    return;\n",
+        "  else:\n",
+        "    grad_des(theta0, theta1)\n",
+        "```\n",
         "\n"
       ]
     }
