--- a/linear_regression_theory.ipynb
+++ b/linear_regression_theory.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "linear_regression_theory.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNOnYQOacSnxZCa5aVsWA9Q",
+      "authorship_tag": "ABX9TyNffAScTmdHjN3pP1EIGiPF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -97,6 +97,28 @@
         "    grad_des(theta0, theta1)\n",
         "```\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UJSJyCfYKBjJ"
+      },
+      "source": [
+        "### **Differential Calculus review**\n",
+        "This is not part of the course, this is mostly for my own understanding xD\n",
+        "\n",
+        "#### **Differentiation formulas**\n",
+        "* Power Rule:\n",
+        "$$\\frac{dy}{dx}x^n = nx^{n-1}$$\n",
+        "* Product Rule:\n",
+        "$$\\frac{d}{dx}f(x)\\cdot g(x) = f(x)\\cdot g'(x) + g(x)\\cdot f'(x)$$\n",
+        "* Quotient Rule:\n",
+        "$$\\frac{d}{dx}\\frac{f(x)}{g(x)} = \\frac{f(x)\\cdot g'(x) - f'(x)\\cdot g(x)}{(g(x))^2}$$\n",
+        "* Chain Rule\n",
+        "$$\\frac{d}{dx}f(g(x)) = f'(g(x))\\cdot g'(x)$$\n",
+        "\n",
+        "#### **Common Derivatives**"
       ]
     }
   ]
