--- a/linear_regression_theory.ipynb
+++ b/linear_regression_theory.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "linear_regression_theory.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNffAScTmdHjN3pP1EIGiPF",
+      "authorship_tag": "ABX9TyOTsiclbnuNUpPgLl1kDZE6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -118,7 +118,46 @@
         "* Chain Rule\n",
         "$$\\frac{d}{dx}f(g(x)) = f'(g(x))\\cdot g'(x)$$\n",
         "\n",
-        "#### **Common Derivatives**"
+        "#### **Common Derivatives**\n",
+        "\n",
+        "* ##### **Trigonometric**\n",
+        "$\\frac{d}{dx}sin(x) = cos(x)$<br>\n",
+        "$\\frac{d}{dx}cos(x) = -sin(x)$<br>\n",
+        "$\\frac{d}{dx}tan(x) = sec^2(x)$<br>\n",
+        "$\\frac{d}{dx}sec(x) = sec(x)tan(x)$<br>\n",
+        "$\\frac{d}{dx}csc(x) = -csc(x)cot(x)$<br>\n",
+        "$\\frac{d}{dx}cot(x) = -csc^2(x)$<br>\n",
+        "$\\frac{d}{dx}sin^-1(x) = \\frac{1}{\\sqrt{1-x^2}}$<br>\n",
+        "$\\frac{d}{dx}cos^-1(x) = -\\frac{1}{\\sqrt{1-x^2}}$<br>\n",
+        "$\\frac{d}{dx}tan^-1(x) = -\\frac{1}{1+x^2}$<br>\n",
+        "\n",
+        "* ##### **Others**\n",
+        "$\\frac{d}{dx}a^x = a^xln(a)$<br>\n",
+        "$\\frac{d}{dx}e^x = e^x$<br>\n",
+        "$\\frac{d}{dx}ln(x) = \\frac{1}{x}$<br>\n",
+        "$\\frac{d}{dx}log_a(x) = \\frac{1}{x\\cdot ln(a)}$<br>\n",
+        "$\\frac{d}{dx}e^{f(x)} = f'(x)e^{f(x)}$<br>\n",
+        "\n",
+        "#### **Implicit Differentiation**\n",
+        "If we have a function that contains itself, we have to implicitely differentiate it.\n",
+        "\n",
+        "An easy example, find $y'$ when\n",
+        "\n",
+        "$$xy = 0$$\n",
+        "$$y + xy' = 0$$\n",
+        "$$xy' = y$$\n",
+        "$$y'= \\frac{y}{x}$$\n",
+        "We basically first differentiate in terms of $x$, then in terms of $y$ and add them.\n",
+        "<br>\n",
+        "Another example,\n",
+        "$$x^3y^2 + xy = 3x$$\n",
+        "$$(3x^2y^2 + 2yy'x^3) + (y + xy') = 3$$\n",
+        "$$2yy'x^3 + xy' = 3-3x^2y^2 - y$$\n",
+        "$$y'(2x^3y+x) = 3-3x^2y^2 - y$$\n",
+        "$$y' = \\frac{3-3x^2y^2 - y}{2x^3y+x}$$\n",
+        "\n",
+        "#### **Applications**\n",
+        "//todo"
       ]
     }
   ]
