--- a/linear_regression_theory.ipynb
+++ b/linear_regression_theory.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "linear_regression_theory.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOTsiclbnuNUpPgLl1kDZE6",
+      "authorship_tag": "ABX9TyO3bAjaLMLJ5K5JKS4u7Sxz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -105,10 +105,10 @@
         "id": "UJSJyCfYKBjJ"
       },
       "source": [
-        "### **Differential Calculus review**\n",
+        "## **Differential Calculus review**\n",
         "This is not part of the course, this is mostly for my own understanding xD\n",
         "\n",
-        "#### **Differentiation formulas**\n",
+        "### **Differentiation formulas**\n",
         "* Power Rule:\n",
         "$$\\frac{dy}{dx}x^n = nx^{n-1}$$\n",
         "* Product Rule:\n",
@@ -118,9 +118,9 @@
         "* Chain Rule\n",
         "$$\\frac{d}{dx}f(g(x)) = f'(g(x))\\cdot g'(x)$$\n",
         "\n",
-        "#### **Common Derivatives**\n",
+        "### **Common Derivatives**\n",
         "\n",
-        "* ##### **Trigonometric**\n",
+        "#### **Trigonometric**\n",
         "$\\frac{d}{dx}sin(x) = cos(x)$<br>\n",
         "$\\frac{d}{dx}cos(x) = -sin(x)$<br>\n",
         "$\\frac{d}{dx}tan(x) = sec^2(x)$<br>\n",
@@ -131,7 +131,7 @@
         "$\\frac{d}{dx}cos^-1(x) = -\\frac{1}{\\sqrt{1-x^2}}$<br>\n",
         "$\\frac{d}{dx}tan^-1(x) = -\\frac{1}{1+x^2}$<br>\n",
         "\n",
-        "* ##### **Others**\n",
+        "#### **Others**\n",
         "$\\frac{d}{dx}a^x = a^xln(a)$<br>\n",
         "$\\frac{d}{dx}e^x = e^x$<br>\n",
         "$\\frac{d}{dx}ln(x) = \\frac{1}{x}$<br>\n",
@@ -156,7 +156,7 @@
         "$$y'(2x^3y+x) = 3-3x^2y^2 - y$$\n",
         "$$y' = \\frac{3-3x^2y^2 - y}{2x^3y+x}$$\n",
         "\n",
-        "#### **Applications**\n",
+        "### **Applications**\n",
         "//todo"
       ]
     }
